# kacrab

./: .editorconfig  .gitignore  .memoryignore  BENCHMARK_PARITY_AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  Makefile  PRODUCER_JAVA_PARITY_TRACKING.md  PRODUCTION_ACCEPTANCE.md  README.md  ROADMAP.md  SECURITY.md  SOAK-REPORT.md  SUPPORT.md  clippy.toml  commitlint.toml  deny.toml  docker-compose.auth.yml  docker-compose.cluster.yml  docker-compose.gssapi.yml  docker-compose.kafka-admin.yml  docker-compose.kafka.yml  docker-compose.tls.yml  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.githooks/: commit-msg  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_report.md
.github/workflows/: ci.yml  docs.yml  real-broker-auth.yml  real-broker.yml
benches/: Cargo.toml  README.md
benches/benches/: producer_accumulator.rs  producer_dispatcher.rs  wire_pipeline.rs
benches/scripts/: consumer_default_matrix.sh  producer_counter_metrics.py  producer_default_matrix.sh  test_producer_counter_metrics.py
benches/src/: lib.rs
docs/: consumer-design.md
docs-book/: book.toml
docs-book/src/: SUMMARY.md  admin.md  benchmarks.md  codegen.md  compression.md  consumer.md  design-decisions.md  failure-modes.md  glossary.md  introduction.md  overview.md  security.md  testing-and-ci.md  verification.md  wire.md
docs-book/src/consumer/: fetching.md  rebalancing.md
docs-book/src/field-guide/: consumer.md  foundations.md  producer.md
docs-book/src/producer/: idempotency.md  partitioning.md  pipeline.md
examples/: Cargo.toml  README.md  admin.rs  config.rs  producer.rs  typed_serializer.rs
examples/src/: lib.rs
kacrab/: Cargo.toml  LICENSE-APACHE  README.md
kacrab-codegen/: Cargo.toml  README.md
kacrab-codegen/schemas/: SOURCE_REF
kacrab-codegen/schemas/config/: 4.3.0.json  kacrab-runtime.json
kacrab-codegen/src/: codegen.rs  errors_java.rs  format.rs  ir.rs  kafka_config.rs  lib.rs  main.rs  parser.rs  upstream.rs
kacrab-codegen/src/codegen/: api_key.rs  default_impl.rs  error.rs  ident.rs  io.rs  read_expr.rs  size_expr.rs  struct_def.rs  test_instance.rs  test_utils.rs  ty.rs  version_check.rs  write_expr.rs
kacrab-codegen/src/errors_java/: codegen.rs  error.rs  parser.rs  retriable.rs
kacrab-codegen/src/ir/: common_struct.rs  field.rs  message.rs  version_range.rs
kacrab-codegen/src/kafka_config/: error.rs  model.rs  parser.rs  rust_catalog.rs
kacrab-codegen/src/parser/: comments.rs  error.rs  field.rs  spec.rs
kacrab-codegen/tests/: protocol_codegen.rs
kacrab-macros/: Cargo.toml  README.md
kacrab-macros/src/: lib.rs
kacrab-macros/tests/: kafka_config.rs
kacrab-protocol/: Cargo.toml  README.md
kacrab-protocol/src/: bytes_io.rs  compression.rs  crc.rs  error.rs  frame.rs  generated.rs  lib.rs  primitives.rs  record.rs  string.rs  tagged.rs  uuid.rs  version.rs
kacrab-protocol/src/bytes_io/: error.rs
kacrab-protocol/src/compression/: error.rs  gzip.rs  lz4.rs  snappy.rs  zstd.rs
kacrab-protocol/src/crc/: error.rs
kacrab-protocol/src/frame/: codec.rs  error.rs
kacrab-protocol/src/primitives/: error.rs
kacrab-protocol/src/record/: batch.rs  entry.rs  error.rs  header.rs
kacrab-protocol/src/string/: error.rs
kacrab-protocol/src/tagged/: error.rs
kacrab-protocol/src/uuid/: error.rs
kacrab-protocol/src/version/: error.rs
kacrab-protocol/tests/: README.md  generated_roundtrip.rs  java_interop.rs  runtime_helpers.rs
kacrab-protocol/tests/java/: KafkaProtocolInterop.java
kacrab-protocol/tests/support/: generated_test_utils.rs
kacrab-protocol/tests/support/generated_test_utils/: add_offsets_to_txn_request.rs  add_offsets_to_txn_response.rs  add_partitions_to_txn_request.rs  add_partitions_to_txn_response.rs  add_raft_voter_request.rs  add_raft_voter_response.rs  allocate_producer_ids_request.rs  allocate_producer_ids_response.rs  alter_client_quotas_request.rs  alter_client_quotas_response.rs  alter_configs_request.rs  alter_configs_response.rs  alter_partition_reassignments_request.rs  (+185 more)
kacrab-test/: Cargo.toml  README.md
kacrab-test/src/: lib.rs
kacrab-util/: Cargo.toml  README.md
kacrab-util/src/: lib.rs
kacrab/src/: admin.rs  common.rs  config.rs  consumer.rs  lib.rs  producer.rs  wire.rs
kacrab/src/admin/: client.rs  error.rs  metrics.rs  types.rs
kacrab/src/common/: consumer_group.rs  coordinator.rs  node.rs  topic_partition.rs
kacrab/src/config/: catalog.rs  client.rs  clients.rs  error.rs  metadata.rs  properties.rs  report.rs  value.rs
kacrab/src/consumer/: assignor.rs  client.rs  config.rs  coordinator.rs  deserializer.rs  error.rs  fetch.rs  interceptor.rs  metrics.rs  next_gen.rs  offsets.rs  record.rs  subscription.rs
kacrab/src/producer/: accumulator.rs  api.rs  batch.rs  client.rs  compression_ratio.rs  config.rs  dispatcher.rs  error.rs  interceptor.rs  kafka.rs  metrics.rs  partitioner.rs  record.rs  response.rs  routing.rs  sender.rs  serializer.rs  transaction.rs
kacrab/src/producer/client/: tests.rs
kacrab/src/producer/dispatcher/: idempotence.rs  partitioner.rs  sequencer.rs  tests.rs  transactions.rs
kacrab/src/producer/metrics/: registry.rs  sender_registry.rs
kacrab/src/producer/sender/: tests.rs
kacrab/src/wire/: auth.rs  backoff.rs  broker.rs  buffer.rs  capabilities.rs  client.rs  config.rs  error.rs  gssapi.rs  kerberos.rs  message.rs  metadata.rs  pipeline.rs  sasl.rs  socket.rs  tls.rs
kacrab/src/wire/metadata/: manager.rs
kacrab/tests/: config_catalog.rs  config_drift.rs  config_macro.rs  config_value.rs  producer_accumulator.rs  producer_dispatcher.rs  public_configs.rs  real_kafka_admin.rs  real_kafka_admin_token.rs  real_kafka_cluster.rs  real_kafka_compression.rs  real_kafka_consumer.rs  real_kafka_gssapi.rs  real_kafka_producer.rs  real_kafka_sasl.rs  real_kafka_tls.rs  wire_session.rs
scripts/: check-commit-message.sh  gen-tls-certs.sh
tests-integration/: Cargo.toml  README.md
tests-integration/src/: lib.rs
