[package]
name = "kacrab-examples"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# kacrab = { workspace = true }

# Add example binaries here as work lands:
# [[example]]
# name = "hello"
# path = "examples/hello.rs"

[lints]
workspace = true
