[package]
name = "kacrab-examples"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
readme = "README.md"

[dev-dependencies]
kacrab = { workspace = true, features = ["producer", "admin"] }
tokio = { workspace = true, features = ["macros", "rt"] }
bytes = { workspace = true }

[[example]]
name = "producer"
path = "producer.rs"

[[example]]
name = "admin"
path = "admin.rs"

[[example]]
name = "config"
path = "config.rs"

[[example]]
name = "typed_serializer"
path = "typed_serializer.rs"

[lints]
workspace = true
