[package]
name = "kacrab-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Procedural macros for kacrab."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
# proc-macro2 = "1"
# quote = "1"
# syn = { version = "2", features = ["full"] }

[lints]
workspace = true
