[package]
name = "kacrab-macros"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Procedural macros for kacrab."
readme = "README.md"
categories = ["development-tools"]
keywords = ["kafka", "config", "macros", "codegen"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["clone-impls", "full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
# Path-only (no version) on purpose: the macro's tests use kacrab in-workspace,
# but kacrab depends on this crate, so a versioned dev-dep would be a publish
# cycle (kacrab is not on crates.io when this crate is published). A path-only
# dev-dependency is dropped from the published package, breaking the cycle.
kacrab = { path = "../kacrab" }

[lints]
workspace = true
