[package]
name = "kacrab-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Test utilities for users of kacrab."
readme = "README.md"

[dependencies]
# kacrab = { workspace = true }

[lints]
workspace = true
